# desktop-screenshoter

./: .env.template  .gitignore  Makefile  README.md  app.py  judge_image_diff.py  log_config.json  manifest.yml  pyproject.toml  requirements.txt  ruff.toml  validate.sh
src/: app.py  judge_image_diff.py  logger.py  main.py  screenshot.py  slack_client.py
