[tool.poetry]
name = "desktop-screenshoter"
version = "0.1.0"
description = ""
authors = ["KazuSh1geru"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"

numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
slack-sdk = "^3.27.2"
python-dotenv = "^1.0.0"
pyautogui = "^0.9.53"
Pillow = "^9.5.0"
PyScreeze = "^0.1.28"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
